--- a/src/main/resources/templates/api.html
+++ b/src/main/resources/templates/api.html
@@ -12,7 +12,9 @@
     이름: <input type="text" name="name"/> <br/>
     나이: <input type="number" name="age"/>
     <button type="submit">전송</button>
-
 </form>
+<a href="/api/res2/jade">/api/res2/jade</a>
+<a href="/api/res2/jade/88">/api/res2/jade/88</a>
+
 </body>
 </html>
